# next

./: .gitignore  README.md  app.json  build.gradle.kts  gradle.properties  nextPYP.def  reverse-proxy.def  rustc.def  settings.gradle.kts
config/: centos.repo  cli.sh  init.sh  micromon.sh  mongod.conf  supervisord.conf
dev/: setup.sh  slurm.conf
docs/: contributing.md
dokka-python-api/: build.gradle.kts
load-test/: .gitignore  Cargo.toml  README.md
load-test/src/: main.rs
run/: admin-runas  admin-user  config.toml.template  hostprocessor  hostprocessor.old  install  install-cli  install-rprox  install-systemd  nextpyp  start  startrprox  stop  stoprprox  test-install  uninstall  uninstall-rprox  uninstall-systemd
run/cluster-templates/: default.peb
run/workflows/: class_tutorial.toml  lamellae_ribosome.toml  spr_tutorial.toml  tomo_tutorial.toml
src/hostProcessor/: Cargo.toml  README.md
src/hostProcessor/src/: framing.rs  lib.rs  logging.rs  main.rs  processes.rs  proto.rs
src/hostProcessor/tests/: client.rs
src/installgen/: Cargo.toml  README.md  build.rs
src/installgen/scripts/: download_wget.sh  install_user.sh  nextpyp_user.sh
src/installgen/src/: config.rs  download.rs  install.rs  installed.rs  main.rs  script.rs
src/installgen/src/commands/: config.rs  install.rs  mod.rs  script.rs
src/installgen/tests/: config.rs  info.rs  install.rs
src/installgen/tests/util/: cmd.rs  install_dir.rs  mod.rs
src/mockPyp/: .gitignore  Cargo.toml  README.md
src/mockPyp/src/: args.rs  image.rs  lib.rs  main.rs  metadata.rs  mrc.rs  particles.rs  progress.rs  rand.rs  refinement.rs  scale.rs  single_particle.rs  svg.rs  tomography.rs  web.rs
src/mockPyp/src/blocks/: mod.rs  spa_coarse_refinement.rs  spa_picking.rs  spa_preprocessing.rs  spa_pure_preprocessing.rs  spa_rawdata.rs  spa_session.rs  tomo_coarse_refinement.rs  tomo_denoising.rs  tomo_denoising_eval.rs  tomo_denoising_training.rs  tomo_drgn_eval.rs  tomo_drgn_train.rs  tomo_import.rs  tomo_milo_eval.rs  tomo_milo_train.rs  tomo_particles_eval.rs  tomo_particles_milo.rs  tomo_particles_train.rs  tomo_picking.rs  tomo_picking_closed.rs  tomo_picking_model.rs  tomo_picking_open.rs  tomo_preprocessing.rs  tomo_pure_preprocessing.rs  tomo_rawdata.rs  tomo_reliondata.rs  tomo_segmentation_closed.rs  tomo_segmentation_open.rs  tomo_session.rs
src/mockPyp/src/commands/: gyp.rs  mod.rs
src/mockPyp/src/sessions/: mod.rs  spr.rs  tomo.rs
src/runas/: Cargo.toml  (+1 more)
webpack.config.d/: webpack.js
(+681 files in other folders)
