
[package]
name = "host-processor"
version = "0.1.0"
authors = ["Jeff Martin <jmartin@cs.duke.edu>"]
edition = "2021"

[dependencies]
gumdrop = "0.8.1"  # MIT (or Apache-2)
anyhow = "1.0.81" # MIT (or Apache-2)
display-error-chain = "0.2.0" # MIT (or Apache-2)
tracing = "0.1.40" # MIT
tracing-subscriber = { version = "0.3.18", features = ["time", "env-filter"] } # MIT
time = { version = "0.3.31", features = ["local-offset", "macros", "formatting"] } # MIT (or Apache-2)
tokio = { version = "1.34.0", features = ["rt", "fs", "net", "time", "macros", "sync", "io-util", "signal", "process"] } # MIT
tokio-util = { version = "0.7.10", features = ["io"] } # MIT
tokio-stream = "0.1.15" # MIT
futures-util = "0.3.30" # MIT (or Apache-2)
rand = "0.8.5" # MIT (or Apache-2)
byteorder = "1.5.0" # MIT (or Unlicense)
async-trait = "0.1.79" # MIT (or Apache-2)
users = "0.11.0" # MIT

[dev-dependencies]
nix = { version = "0.28.0", features = ["process", "signal"] }
galvanic-assert = "0.8.7"
