
[package]
name = "installgen"
authors = ["Jeff Martin <jmartin@cs.duke.edu>"]
edition = "2021"

[dependencies]
gumdrop = "0.8.1"  # MIT (or Apache-2)
anyhow = "1.0.81" # MIT (or Apache-2)
display-error-chain = "0.2.0" # MIT (or Apache-2)
users = "0.11.0" # MIT
toml = "0.8.20" # MIT (or Apache-2)
semver = "1.0.26" # MIT (or Apache-2)
indoc = "2.0.6"
nix = { version = "0.30.1", features = ["fs", "user"] }

[dev-dependencies]
galvanic-assert = "0.8.7"
assert_cmd = "2.0.17"
predicates = "3.1.3"
assert_fs = "1.1.3"

[build-dependencies]
toml = "0.8.20"
